force-app/main/default/objects/Channel_Partner__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <type>TextArea</type>
</CustomField>