force-app/main/default/objects/Channel_Partner__c/fields/BDM_Name__c.field-meta.xml
<CustomField>
    <fullName>BDM_Name__c</fullName>
    <label>BDM Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sameer Sangle</fullName>
            </value>
            <value>
                <fullName>Shashi D</fullName>
            </value>
            <value>
                <fullName>Muhammed Thahir</fullName>
            </value>
            <value>
                <fullName>Keerthivasan Vishvanathan</fullName>
            </value>
            <value>
                <fullName>SATHYANARAIN LV</fullName>
            </value>
            <value>
                <fullName>Meruva Ashok Kumar Reddy</fullName>
            </value>
            <value>
                <fullName>Deepak Kalauni</fullName>
            </value>
            <value>
                <fullName>Vinodh Selvaraj</fullName>
            </value>
            <value>
                <fullName>Shahil</fullName>
            </value>
            <value>
                <fullName>Shubham Chourey</fullName>
            </value>
            <value>
                <fullName>Ramakant M</fullName>
            </value>
            <value>
                <fullName>Sourabh Kumar</fullName>
            </value>
            <value>
                <fullName>Syed Mudhassir</fullName>
            </value>
            <value>
                <fullName>Shashank Mamdapure</fullName>
            </value>
            <value>
                <fullName>Manmeet</fullName>
            </value>
            <value>
                <fullName>Annesha Das</fullName>
            </value>
            <value>
                <fullName>Avinash Giri</fullName>
            </value>
            <value>
                <fullName>Lokesh Agarwal</fullName>
            </value>
            <value>
                <fullName>Avinash Dnyanoba Ghule</fullName>
            </value>
            <value>
                <fullName>Chetna Mishra</fullName>
            </value>
            <value>
                <fullName>Satyajit</fullName>
            </value>
            <value>
                <fullName>Rahul Tiwari</fullName>
            </value>
            <value>
                <fullName>Ram Thakur</fullName>
            </value>
            <value>
                <fullName>Manju Reddy</fullName>
            </value>
            <value>
                <fullName>Aryan Gaur</fullName>
            </value>
            <value>
                <fullName>Ravi Teja</fullName>
            </value>
            <value>
                <fullName>Sudeepto Das</fullName>
            </value>
            <value>
                <fullName>Nenavath Moneesh</fullName>
            </value>
            <value>
                <fullName>Soumya Chankraborty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>