force-app/main/default/objects/Channel_Partner__c/fields/Channel_Partner_Owner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Owner__c</fullName>
    <label>Channel Partner Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>