force-app/main/default/objects/Channel_Partner__c/fields/Classification_of_Channel_Partners__c.field-meta.xml
<CustomField>
    <fullName>Classification_of_Channel_Partners__c</fullName>
    <label>Classification of Channel Partners</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real estate - Individual</fullName>
            </value>
            <value>
                <fullName>Real Estate - Institution</fullName>
            </value>
            <value>
                <fullName>Housing Loan</fullName>
            </value>
            <value>
                <fullName>Builders</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>