force-app/main/default/objects/Channel_Partner__c/fields/Location_of_CP__c.field-meta.xml
<CustomField>
    <fullName>Location_of_CP__c</fullName>
    <label>Area of Channel Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>