force-app/main/default/objects/Channel_Partner__c/fields/On_Boarding_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Date__c</fullName>
    <label>On Boarding Date</label>
    <type>Date</type>
</CustomField>