force-app/main/default/objects/Channel_Partner__c/fields/PAN_Number_of_Bank_Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>PAN_Number_of_Bank_Account_Holder__c</fullName>
    <label>PAN Number of Bank Account Holder</label>
    <length>50</length>
    <type>Text</type>
</CustomField>