force-app/main/default/objects/Channel_Partner__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <description>Property Name to which Broker is associated with</description>
    <label>Property Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>