force-app/main/default/objects/Channel_Partner__c/fields/Rera_ID__c.field-meta.xml
<CustomField>
    <fullName>Rera_ID__c</fullName>
    <label>Rera ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>