force-app/main/default/objects/Channel_Partner__c/fields/Revenue_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Percentage__c</fullName>
    <label>Revenue Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>