force-app/main/default/objects/Channel_Partner__c/fields/Revenue_Share_Applicable_On__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_Applicable_On__c</fullName>
    <label>Revenue Share Applicable On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Woodwork</fullName>
            </value>
            <value>
                <fullName>Woodwork &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Overall Quote Value</fullName>
            </value>
            <value>
                <fullName>Woodwork Net Taxes</fullName>
            </value>
            <value>
                <fullName>Quote Value Net Taxes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>