force-app/main/default/objects/Channel_Partner__c/fields/Revenue_Share_Payable_On__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_Payable_On__c</fullName>
    <label>Revenue Share Payable On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>