force-app/main/default/objects/Channel_Partner__c/fields/Upfront_Cost_Per_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Cost_Per_Meeting__c</fullName>
    <label>Upfront Cost Per Meeting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>