force-app/main/default/objects/Channel_Partner__c/recordTypes/Ambassador.recordType-meta.xml
<RecordType>
    <fullName>Ambassador</fullName>
    <active>true</active>
    <description>Ambassador</description>
    <label>Ambassador</label>
</RecordType>