force-app/main/default/objects/Channel_Partner__c/recordTypes/B2B_Residential.recordType-meta.xml
<RecordType>
    <fullName>B2B_Residential</fullName>
    <active>true</active>
    <label>B2B Residential</label>
</RecordType>