force-app/main/default/objects/Channel_Partner__c/recordTypes/Broker_Channel_Partner.recordType-meta.xml
<RecordType>
    <fullName>Broker_Channel_Partner</fullName>
    <active>true</active>
    <description>Broker/Channel Partner</description>
    <label>Broker/Channel Partner</label>
</RecordType>