force-app/main/default/objects/Channel_Partner__c/recordTypes/Builder_Leads.recordType-meta.xml
<RecordType>
    <fullName>Builder_Leads</fullName>
    <active>true</active>
    <description>Builder Leads</description>
    <label>Builder Leads</label>
</RecordType>