force-app/main/default/objects/Channel_Partner__c/recordTypes/Exceed.recordType-meta.xml
<RecordType>
    <fullName>Exceed</fullName>
    <active>true</active>
    <description>Exceed</description>
    <label>Exceed</label>
</RecordType>