force-app/main/default/objects/Channel_Partner__c/recordTypes/Propertywala.recordType-meta.xml
<RecordType>
    <fullName>Propertywala</fullName>
    <active>true</active>
    <label>Propertywala</label>
</RecordType>