force-app/main/default/objects/Channel_Partner__c/validationRules/Phone_number_should_not_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_should_not_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Phone__c),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>You don’t have access to Change Channel Partner Number. Please contact Salesforce Admin.</errorMessage>
</ValidationRule>