force-app/main/default/objects/Channel_Partner__c/validationRules/Phone_number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND( NOT(ISBLANK(Phone__c)),NOT(REGEX(Phone__c, &quot;\\D*?(\\d\\D*?){10}&quot;))), true, false)</errorConditionFormula>
    <errorMessage>Please input valid 10 digit contact number.</errorMessage>
</ValidationRule>