force-app/main/default/objects/Channel_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>City__c</columns>
    <columns>On_Boarding_Date__c</columns>
    <columns>IsActive__c</columns>
    <columns>Sub_Source__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>